Fix overflow

--- a/src/components/LineGallery/styles.module.scss
+++ b/src/components/LineGallery/styles.module.scss
@@ -1,9 +1,12 @@
 .gallery {
   width: 100%;
-  display: flex;
-  flex-wrap: nowrap;
+  display: inline-block;
+  white-space: nowrap;
   overflow-x: auto;
-  align-items: center;
+
+  & > div {
+    display: inline-block;
+  }
 
   /* Firefox */
   & {
@@ -48,4 +51,5 @@
   border-radius: 16px;
   max-height: 100px !important;
   border: #eee solid 1px;
+  display: inline-block;
 }
